# diabetes-risk-mlops

./: .env.example  .gitignore  Makefile  README.md  dvc.yaml  pyproject.toml  run.ps1
.dvc/: config
.github/workflows/: cd_pipeline.yml  ci_pipeline.yml
api/: Dockerfile  main.py  schemas.py
api/static/: style.css
api/templates/: index.html
notebooks/: README.md
src/: evaluate.py  train.py  validate.py
tests/: test_api.py  test_model.py
