[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "diabetes-risk-mlops"
version = "0.1.0"
description = "Diabetes risk prediction — MLOps V2 portfolio project"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",   # needed for FastAPI Form() support
  "pydantic>=2.7.0",
  "mlflow>=2.13.0",
  "scikit-learn>=1.4.0",
  "xgboost>=2.0.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "dvc>=3.50.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",          # TestClient dependency
  "ruff>=0.4.0",
]

# Optional DagsHub support — install with: pip install -e ".[dagshub]"
dagshub = [
  "dagshub>=0.3.25",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
